added socials logos

--- a/main.html
+++ b/main.html
@@ -68,16 +68,16 @@
     <div id="socials">
       <div>
         <a href="https://www.facebook.com/sydney.santos.7773/">
-          <img id="facebook" src="../images/socials/facebook.png" alt="" />
+          <img id="facebook" src="/images/facebook.png" alt="" />
         </a>
         <a href="https://www.instagram.com/lvrbysyd_/">
-          <img id="instagram" src="../images/socials/social.png" alt="" />
+          <img id="instagram" src="images/instagram.png" alt="" />
         </a>
         <a href="https://github.com/Syddevv">
-          <img id="github" src="../images/socials/github.png" alt="" />
+          <img id="github" src="images/github.png" alt="" />
         </a>
         <a href="https://www.tiktok.com/@sydlvrby"
-          ><img id="tiktok" src="../images/socials/tik-tok.png" alt=""
+          ><img id="tiktok" src="/images/tik-tok.png" alt=""
         /></a>
       </div>
       <p>Developed by Sydney Santos</p>
