edit file directory of fb and tiktok logo

--- a/main.html
+++ b/main.html
@@ -68,7 +68,7 @@
     <div id="socials">
       <div>
         <a href="https://www.facebook.com/sydney.santos.7773/">
-          <img id="facebook" src="/images/facebook.png" alt="" />
+          <img id="facebook" src="images/facebook.png" alt="" />
         </a>
         <a href="https://www.instagram.com/lvrbysyd_/">
           <img id="instagram" src="images/instagram.png" alt="" />
@@ -77,7 +77,7 @@
           <img id="github" src="images/github.png" alt="" />
         </a>
         <a href="https://www.tiktok.com/@sydlvrby"
-          ><img id="tiktok" src="/images/tik-tok.png" alt=""
+          ><img id="tiktok" src="images/tik-tok.png" alt=""
         /></a>
       </div>
       <p>Developed by Sydney Santos</p>
