--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
       </button>
     </div>
 
-    <p>SCORE</p>
+    <p id="score">SCORE</p>
     <div id="scores-container">
       <div id="myScore">
         <p>YOU</p>
